<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">NT Mem Test</string>
    <string name="book_prompt">Choose a book</string>
    <string name="chapter_prompt">Choose a chapter</string>
    <string name="verse_prompt">Choose a verse</string>
    <string name="preview_text">Hint</string>
    <string name="auto_prompt">Choose verse sequence</string>
    <string name="version_prompt">Choose a Bible version</string>
    <string name="param_prompt">Choose search parameters</string>
    <string name="strong_prompt">Choose search number</string>
    <string name="select_file"></string>
    <string-array name="book_list">
        <item>Matthew</item>
        <item>Mark</item>
        <item>Luke</item>
        <item>John</item>
        <item>Acts</item>
        <item>Romans</item>
        <item>1 Corinthians</item>
        <item>2 Corinthians</item>
        <item>Galatians</item>
        <item>Ephesians</item>
        <item>Philippians</item>
        <item>Colossians</item>
        <item>1 Thessalonians</item>
        <item>2 Thessalonians</item>
        <item>1 Timothy</item>
        <item>2 Timothy</item>
        <item>Titus</item>
        <item>Philemon</item>
        <item>Hebrews</item>
        <item>James</item>
        <item>1 Peter</item>
        <item>2 Peter</item>
        <item>1 John</item>
        <item>2 John</item>
        <item>3 John</item>
        <item>Jude</item>
        <item>Revelation</item>
    </string-array>
    <string-array name="book_list_all">
        <item>Genesis</item>
        <item>Exodus</item>
        <item>Leviticus</item>
        <item>Numbers</item>
        <item>Deuteronomy</item>
        <item>Joshua</item>
        <item>Judges</item>
        <item>Ruth</item>
        <item>1 Samuel</item>
        <item>2 Samuel</item>
        <item>1 Kings</item>
        <item>2 Kings</item>
        <item>1 Chronicles</item>
        <item>2 Chronicles</item>
        <item>Ezra</item>
        <item>Nehemiah</item>
        <item>Esther</item>
        <item>Job</item>
        <item>Psalm</item>
        <item>Proverbs</item>
        <item>Ecclesiastes</item>
        <item>Song of Solomon</item>
        <item>Isaiah</item>
        <item>Jeremiah</item>
        <item>Lamentations</item>
        <item>Ezekiel</item>
        <item>Daniel</item>
        <item>Hosea</item>
        <item>Joel</item>
        <item>Amos</item>
        <item>Obadiah</item>
        <item>Jonah</item>
        <item>Micah</item>
        <item>Nahum</item>
        <item>Habakkuk</item>
        <item>Zephaniah</item>
        <item>Haggai</item>
        <item>Zechariah</item>
        <item>Malachi</item>
        <item>Matthew</item>
        <item>Mark</item>
        <item>Luke</item>
        <item>John</item>
        <item>Acts</item>
        <item>Romans</item>
        <item>1 Corinthians</item>
        <item>2 Corinthians</item>
        <item>Galatians</item>
        <item>Ephesians</item>
        <item>Philippians</item>
        <item>Colossians</item>
        <item>1 Thessalonians</item>
        <item>2 Thessalonians</item>
        <item>1 Timothy</item>
        <item>2 Timothy</item>
        <item>Titus</item>
        <item>Philemon</item>
        <item>Hebrews</item>
        <item>James</item>
        <item>1 Peter</item>
        <item>2 Peter</item>
        <item>1 John</item>
        <item>2 John</item>
        <item>3 John</item>
        <item>Jude</item>
        <item>Revelation</item>
    </string-array>
    <string-array name="version_list">
        <item>HCSB</item>
        <item>KJV</item>
        <item>NASB</item>
        <item>NIV</item>
        <item>NKJV</item>
        <item>ESV</item>
        <item>AMP</item>
        <item>RVR</item>
        <item>KJVS</item>
    </string-array>
    <string-array name="version_list2">
        <item>any</item>
        <item>HCSB</item>
        <item>KJV</item>
        <item>NASB</item>
        <item>NIV</item>
        <item>NKJV</item>
        <item>ESV</item>
        <item>AMP</item>
        <item>RVR</item>
        <item>KJVS</item>
        <item>Strong</item>
    </string-array>
    <string-array name="search_opt">
        <item>exact</item>
        <item>any</item>
        <item>all</item>
    </string-array>
    <string-array name="auto_list">
        <item>Increment</item>
        <item>Random</item>
        <item>MyVerses</item>
    </string-array>
    <string-array name="strong_list">
        <item>H1</item>
        <item>H2</item>
        <item>H3</item>
        <item>H4</item>
        <item>H5</item>
        <item>H6</item>
        <item>H7</item>
        <item>H8</item>
        <item>H9</item>
        <item>H10</item>
        <item>H11</item>
        <item>H12</item>
        <item>H13</item>
        <item>H14</item>
        <item>H15</item>
        <item>H16</item>
        <item>H17</item>
        <item>H18</item>
        <item>H19</item>
        <item>H20</item>
    </string-array>
    <string-array name="James_list">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
    </string-array>
    <string-array name="James_1_list">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
        <item>13</item>
        <item>14</item>
        <item>15</item>
        <item>16</item>
        <item>17</item>
        <item>18</item>
        <item>19</item>
        <item>20</item>
        <item>21</item>
        <item>22</item>
        <item>23</item>
        <item>24</item>
        <item>25</item>
        <item>26</item>
        <item>27</item>
    </string-array>

    <!-- Color Picker -->
    <string name="dialog_color_picker">Color Picker</string>
    <string name="press_color_to_apply">Press on Color to apply</string>

    <!-- Preferences -->
    <string name="pref_category">Category</string>
    <string name="color1_title">Color 1</string>
    <string name="color1_summary">black color by default, set by reference</string>
    <string name="color2_title">Color 2</string>
    <string name="color2_summary">not persistent color\nalpha slider added via code</string>
    <string name="color3_title">Color 3</string>
    <string name="color3_summary">picker with alpha slider</string>
    <string name="color4_title">Color 4</string>
    <string name="color4_summary">color set with HEX code in xml</string>
</resources>