<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/ll00"
    android:orientation="vertical"
    android:padding="1dip"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:id="@+id/ll01"
        android:layout_width="fill_parent"
        android:layout_height="50dip"
        android:weightSum="4"
        android:orientation="horizontal" >

        <Spinner
            android:id="@+id/sBook"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:prompt="@string/book_prompt" />

        <Spinner
            android:id="@+id/sChapter"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:prompt="@string/chapter_prompt" />

        <Spinner
            android:id="@+id/sVerse"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:prompt="@string/verse_prompt" />

    </LinearLayout>
    <LinearLayout
      android:id="@+id/ll02"
      android:orientation="horizontal"
      android:layout_width="fill_parent"
      android:layout_height="38dip">
        <CheckBox android:id="@+id/chPreview"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="80"
        android:text="@string/preview_text"
        />
        <Spinner
            android:id="@+id/sAuto"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="140"
            android:prompt="@string/auto_prompt"
        />
        <Spinner
            android:id="@+id/sVersion"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="100"
            android:prompt="@string/version_prompt"
        />
    </LinearLayout>
    <TextView
      android:id="@+id/tvBlank01"
      android:text=""
      android:gravity="center_horizontal"
      android:background="#000000"
      android:layout_width="fill_parent"
      android:layout_height="8dip"/>
    <LinearLayout
          android:id="@+id/editLayout"
          android:orientation="horizontal"
          android:layout_width="fill_parent"
          android:layout_height="100dip">
            <EditText
                android:id="@+id/editText"
                android:textSize="8pt"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"/>
    </LinearLayout>

    <LinearLayout
          android:id="@+id/ll03"
          android:orientation="horizontal"
          android:layout_width="fill_parent"
          android:layout_height="36dip">
        <TextView
            android:id="@+id/scoreOutput"
            android:text="Words: 0%     Order: 0%"
            android:textSize="5pt"
            android:gravity="center_horizontal"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="160"/>
        <Button android:id="@+id/btnMenu" android:layout_width="0dp"
            android:layout_weight="80"
            android:textSize="5pt"
            android:layout_height="fill_parent" android:text="Menu"></Button>
        <Button android:id="@+id/btnVotD" android:layout_width="0dp"
              android:layout_weight="80"
          android:textSize="5pt"
          android:layout_height="fill_parent" android:text="VotD"></Button>
          <Button android:id="@+id/btnAddVerse" android:layout_width="0dp"
              android:layout_weight="80"
          android:textSize="5pt"
          android:layout_height="fill_parent" android:text="+ Verse"></Button>
          <Button android:id="@+id/btnAddChapter" android:layout_width="0dp"
              android:layout_weight="80"
          android:textSize="5pt"
          android:layout_height="fill_parent" android:text="+ Chap"></Button>
         
    </LinearLayout>

    <LinearLayout
      android:id="@+id/llVerse"
      android:orientation="horizontal"
      android:layout_width="fill_parent"
      android:layout_height="236dip">
      <RelativeLayout
          android:layout_width="0dp"
          android:layout_height="fill_parent"
          android:layout_weight="0.10">
        <TextView
            android:id="@+id/fakeLeft"
            android:text=""
            android:textSize="8pt"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"/>
      </RelativeLayout>
      <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="0.80">
      <ViewFlipper android:id="@+id/ViewFlipper01"
            android:layout_width="fill_parent" android:layout_height="fill_parent">
            <!--adding views to ViewFlipper-->
            <TextView
            android:id="@+id/returnVerse"
            android:text="James 1:1"
            android:textSize="8pt"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:gravity="center_vertical|center_horizontal"/>
            <TextView
            android:id="@+id/returnText"
            android:text="Actual verse here..."
            android:textSize="8pt"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:gravity="center_vertical|center_horizontal"/>
            
        </ViewFlipper>
        </RelativeLayout>
        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="0.10">
        <TextView
            android:id="@+id/fakeRight"
            android:text=""
            android:textSize="8pt"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"/>
        </RelativeLayout>
    </LinearLayout>

    <LinearLayout
          android:id="@+id/ll04"
          android:orientation="horizontal"
          android:layout_width="fill_parent"
          android:layout_height="128dip"
          android:layout_weight="1">
        <Spinner
            android:id="@+id/sStrongNumbers"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="125"
            android:prompt="@string/strong_prompt" />
       <TextView
        android:id="@+id/tvStrongDefinition"
        android:text="Strong definition"
        android:textSize="8pt"
        android:layout_width="0dp"
        android:layout_height="fill_parent"
        android:gravity="top|center_horizontal"
        android:layout_weight="300"/>
    </LinearLayout>
        
</LinearLayout>
